--- a/public/html/index.min.html
+++ b/public/html/index.min.html
@@ -1,37 +1,33 @@
-<!DOCTYPE html><html><head>
-    <title>Debate Synergy</title>
+<!DOCTYPE html><html>
+<title>Debate Synergy</title>
+<link rel="stylesheet" href="/min/ds.min.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/js/select2.full.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
+<script src="/user/index.js"></script>
 
-    <link rel="stylesheet" href="/min/ds.min.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/js/select2.full.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
-    <script src="/user/index.js"></script>
+<script src="/min/ds.js"></script>
 
-    <script src="/min/ds.min.js"></script>
-</head>
-<body>
-    <aside id="sidebar">
-        <div id="controls">
-            <select id="searchtext"></select>
-            <button id="format-highlight" class="icon-sw-highlighter" title="Highlight underlined read card text"></button>
-            <button id="readcard" title="Read text" class="icon-underline"></button>
-            <button id="block" title="Heading" class="icon-header"></button>
-            <button id="read" title="Bold" class="icon-bold"></button>
-            <button id="format-remove" title="Clear formatting" class="icon-eraser"></button>
-            <button id="showfileinfo" title="File Info &amp; Sharing" class="icon-share"></button>
-            <button id="file-new" title="New File" class="icon-doc-new"></button>
-            <button id="showsettings" title="Settings" class="icon-sliders"></button>
-            <button id="showround" title="Round"></button>
-            <div class="dropdown">
-                <button class="icon-ellipsis-vert"></button>
-                <div class="dropdown-menu">
-                    <button id="ft-minimize-unread" class="icon-fontsize"> Minimize Unread Text</button>
-                    <button id="ft-collapse" class="icon-tree"> Collapse Filetree</button>
-                </div>
+<aside id="sidebar">
+    <div id="controls">
+        <select id="searchtext"></select>
+        <button id="format-highlight" class="icon-sw-highlighter" title="Highlight underlined read card text"></button>
+        <button id="readcard" title="Read text" class="icon-underline"></button>
+        <button id="block" title="Heading" class="icon-header"></button>
+        <button id="read" title="Bold" class="icon-bold"></button>
+        <button id="format-remove" title="Clear formatting" class="icon-eraser"></button>
+        <button id="showfileinfo" title="File Info &amp; Sharing" class="icon-share"></button>
+        <button id="file-new" title="New File" class="icon-doc-new"></button>
+        <button id="showsettings" title="Settings" class="icon-sliders"></button>
+        <button id="showround" title="Round"></button>
+        <div class="dropdown">
+            <button class="icon-ellipsis-vert"></button>
+            <div class="dropdown-menu">
+                <button id="ft-minimize-unread" class="icon-fontsize"> Minimize Unread Text</button>
+                <button id="ft-collapse" class="icon-tree"> Collapse Filetree</button>
             </div>
         </div>
-        <div id="filetree"></div>
-    </aside>
-    <main id="docs"></main>
-</body>
-</html>
+    </div>
+    <div id="filetree"></div>
+</aside>
+<main id="docs"></main>
