--- a/public/html/manual.html
+++ b/public/html/manual.html
@@ -1,19 +1,20 @@
 <article id="doc-manual" class="doc" contenteditable>
   <style>
-      li{
+      li, h1{
         margin-bottom: 20px;
+      }
+      #doc-manual{
+        font-size: 11pt !important;
       }
 
   </style>
   <h1> Welcome to Debate Synergy</h1>
 <p>
-  DebateSynergy.com enables debate students to store online research and stream debates.
-  <a onClick="window.open('http://www.wired.com/2012/01/ff_debateteam/')"  href="#" target="_blank">Featured in Wired</a>. </p>
-
-
-
-
-<h1> Manual </h1>
+<b>DebateSynergy.com enables debate studentsto store online research and stream debates.  
+<br>
+<a onClick="window.open('http://www.wired.com/2012/01/ff_debateteam/')"  href="#" target="_blank">Wired '12</a></b>
+("High School Debate at 350 WPM", Wired Magazine, Jan 2012, http://www.wired.com/2012/01/ff_debateteam/ )
+ </p>
 
 <ul>
   <li> Sign in with Google to create your account to store online research for paperless debate, synced with your Google Drive.
