--- a/public/html/manual.html
+++ b/public/html/manual.html
@@ -10,7 +10,7 @@
   </style>
   <h1> Welcome to Debate Synergy</h1>
 <p>
-<b>DebateSynergy.com enables debate studentsto store online research and stream debates.  
+<b>DebateSynergy.com enables debate students to store online research and stream debates
 <br>
 <a onClick="window.open('http://www.wired.com/2012/01/ff_debateteam/')"  href="#" target="_blank">Wired '12</a></b>
 ("High School Debate at 350 WPM", Wired Magazine, Jan 2012, http://www.wired.com/2012/01/ff_debateteam/ )
