--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><title>Debate Synergy</title>
-<meta name="description" content="DebateSynergy.com enables debate students to store online research and stream debates. Developed by Alex Gulakov 2010-2017 contact@debatesynergy.com. All content licensed as Creative Commons BY-SA 4.0">
+<!DOCTYPE html><title>Debate Synergy | Store online research and stream debates</title>
 <link rel="stylesheet" href="/css/select2.min.css" />
 <link rel="stylesheet" href="/css/theme_elements.css" />
 <link rel="stylesheet" href="/css/docstyle.css" />
@@ -34,15 +33,4 @@
 <script src="js/init.js"></script>
 <!-- <script src="/min/ds.js"></script> -->
 
-<aside id="sidebar">
-  <div id="controls">
-    <select id="searchtext"></select>
-    <button id="format-highlight" class="icon-sw-highlighter" title="Highlight underlined read card text"></button> <button id="readcard" title="Read text" class="icon-underline"></button> <button id="block" title="Heading" class="icon-header"></button>
-    <button id="read" title="Bold" class="icon-bold"></button> <button id="format-remove" title="Clear formatting" class="icon-eraser"></button> <button id="showfileinfo" title="File Info &amp; Sharing" class="icon-share"></button> <button id="file-new" title="New File" class="icon-doc-new">
-    </button> <button id="showsettings" title="Settings" class="icon-sliders"></button> <button id="showround" title="Round"></button> <div class="dropdown"> <button class="icon-ellipsis-vert"></button> <div class="dropdown-menu"> <button id="ft-minimize-unread" class="icon-fontsize"> Minimize Unread Text</button>
-    <button id="ft-collapse" class="icon-tree"> Collapse Filetree</button> </div> </div>
-  </div>
-  <div id="filetree"></div>
-</aside>
-
-  <main id="docs" class="size-mode-1"></main>
+<main id="docs" class="size-mode-1"></main>
