--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><title>Debate Synergy | Store online research and stream debates</title>
+<!DOCTYPE html><title>Debate Synergy | Share online research and stream debates</title>
 <link rel="stylesheet" href="/css/select2.min.css" />
 <link rel="stylesheet" href="/css/theme_elements.css" />
 <link rel="stylesheet" href="/css/docstyle.css" />
@@ -11,10 +11,9 @@
 <link rel="stylesheet" href="/css/icon/debate-icons.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/js/select2.full.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.min.js"></script>
 
-<script src="user/index.js"></script>
-
+<body>
 <script src="js/alerts.js"></script>
 <script src="js/controlbuttons.js"></script>
 <script src="js/controlsettings.js"></script>
@@ -32,5 +31,4 @@
 <script src="js/navigation.js"></script>
 <script src="js/init.js"></script>
 <!-- <script src="/min/ds.js"></script> -->
-
-<main id="docs" class="size-mode-1"></main>
+</body>
